@@ -42,4 +42,56 @@ subtest 'in sync with $ENV{PATH}' => sub {
 
 };
 
+subtest '_cmp' => sub {
+
+  my $process = sub {
+    [
+      sort { FFI::CheckLib::_cmp($a,$b) }
+      map  { FFI::CheckLib::_matches($_, 'c:/bin') }
+      @_
+    ];
+  };
+  
+  is(
+    $process->(qw( foo-1.dll bar-2.dll baz-0.dll )),
+    [
+      [ 'bar', 'c:/bin/bar-2.dll', 2 ],
+      [ 'baz', 'c:/bin/baz-0.dll', 0 ],
+      [ 'foo', 'c:/bin/foo-1.dll', 1 ],
+    ],
+    'name first 1',
+  );
+
+  is(
+    $process->(qw( baz-0.dll foo-1.dll bar-2.dll )),
+    [
+      [ 'bar', 'c:/bin/bar-2.dll', 2 ],
+      [ 'baz', 'c:/bin/baz-0.dll', 0 ],
+      [ 'foo', 'c:/bin/foo-1.dll', 1 ],
+    ],
+    'name first 1',
+  );
+
+  is(
+    $process->(qw( bar-2.dll foo-1.dll baz-0.dll )),
+    [
+      [ 'bar', 'c:/bin/bar-2.dll', 2 ],
+      [ 'baz', 'c:/bin/baz-0.dll', 0 ],
+      [ 'foo', 'c:/bin/foo-1.dll', 1 ],
+    ],
+    'name first 1',
+  );
+
+  is(
+    $process->(qw( foo-2.dll foo-0.dll foo-1.dll )),
+    [
+      [ 'foo', 'c:/bin/foo-2.dll', 2, ],
+      [ 'foo', 'c:/bin/foo-1.dll', 1, ],
+      [ 'foo', 'c:/bin/foo-0.dll', 0, ],
+    ],
+    'newer version first',
+  );
+
+};
+
 done_testing;
